# libpetrbf

./: .gitignore  AUTHORS  Makefile.am  README.md  config.h  configure.ac  libtool
2d/: get_vorticity.h
src/: Makefile.am  get_buffer_2d.h  get_buffer_3d.h  get_cluster_2d.h  get_cluster_3d.h  get_trunc_2d.h  get_trunc_3d.h  get_vorticity_2d.h  get_vorticity_3d.h  libpetrbf.h  libpetrbf.la  matmult_2d.cxx  matmult_3d.cxx  mpi_range_2d.cxx  mpi_range_3d.cxx  par_2d.h  par_3d.h  rbf_interpolation_2d.cxx  rbf_interpolation_3d.cxx  vorticity_evaluation_2d.cxx  vorticity_evaluation_3d.cxx
src/.deps/: matmult_2d.Plo  matmult_3d.Plo  mpi_range_2d.Plo  mpi_range_3d.Plo  rbf_interpolation_2d.Plo  rbf_interpolation_3d.Plo  vorticity_evaluation_2d.Plo  vorticity_evaluation_3d.Plo
src/.libs/: libpetrbf-1.0.so.0  libpetrbf-1.0.so.0.0.0  libpetrbf.la  libpetrbf.lai
tests/: Makefile.am  cylinder  cylinder.cxx  test-3d  test-3d.cxx
tests/.deps/: cylinder.Po  test-3d.Po
